# -autonomousagent

./: Vulavula_API_Tutorial.ipynb  fintech.db  readme.md
docs/diagrams/: README.md
fintech_app/: .env.example  README.md  pyproject.toml  pytest.ini
fintech_app/src/: config.py  database.py  main.py  models.py  schemas.py
fintech_app/tests/: test_main.py
frontend/: package-lock.json
frontend/src/: App.jsx
frontend/src/components/: Button.jsx  Card.jsx  Header.jsx  Layout.jsx
frontend/src/pages/: Dashboard.jsx  JoinNetworkScreen.jsx  LoginScreen.jsx  RadarScreen.jsx  SecureVaultScreen.jsx  WalletScreen.jsx  WelcomeScreen.jsx  WithdrawalDestinationScreen.jsx  WithdrawalReviewScreen.jsx  WithdrawalSuccessScreen.jsx
frontend/src/services/: api.js  walletService.js
frontend/srcsrc/components/: Input.jsx  Navigation.jsx
frontend/srcsrc/services/: authService.js  userService.js
studio/: Unsloth_Studio_Colab.ipynb
